k8s/deploy-kmart.yml
apiVersion: v1
kind: Service
metadata:
  name: kmart-product
spec:
  type: NodePort
  ports:
    - name: kmart-product
      port: 8081      # 서비스 포트
      targetPort: 8080  # 타켓, 즉 pod의 포트
      nodePort: 30001
      protocol: TCP
  selector:
    app: kmart-product
---
apiVersion: v1
kind: Service
metadata:
  name: kmart-payment
spec:
  type: NodePort
  ports:
    - name: kmart-payment
      port: 8082      # 서비스 포트
      targetPort: 8080  # 타켓, 즉 pod의 포트
      nodePort: 30002
      protocol: TCP
  selector:
    app: kmart-payment
---
apiVersion: v1
kind: Service
metadata:
  name: kmart-order
spec:
  type: NodePort
  ports:
    - name: kmart-order
      port: 8083      # 서비스 포트
      targetPort: 8080  # 타켓, 즉 pod의 포트
      nodePort: 30003
      protocol: TCP
  selector:
    app: kmart-order
---
apiVersion: v1
kind: Service
metadata:
  name: kmart-shipment
spec:
  type: NodePort
  ports:
    - name: kmart-shipment
      port: 8084      # 서비스 포트
      targetPort: 8080  # 타켓, 즉 pod의 포트
      nodePort: 30004
      protocol: TCP
  selector:
    app: kmart-shipment
