k8s/deploy-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: product-db
spec:
  type: NodePort
  ports:
    - name: product-db
      port: 5432      # 서비스 포트
      targetPort: 5432  # 타켓, 즉 pod의 포트
      nodePort: 30033
      protocol: TCP
  selector:
    app: postgresql
