k8s/kmart-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kmart-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/websocket-services: "kmart-shipment"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kmart-product
                port:
                  number: 8081
          - path: /reqProductPayment
            pathType: Exact
            backend:
              service:
                name: kmart-payment
                port:
                  number: 8082
          - path: /webpush
            pathType: Exact
            backend:
              service:
                name: kmart-shipment
                port:
                  number: 8084
